...
         * the viewmodel communicate back to the searchUi view using futures
         */
        @OptIn(ExperimentalMaterial3Api::class)
        @Composable
        fun SearchUi(viewModel: SearchViewModel) {
            //need to use remember because it triggers an action each time
            var text by remember { mutableStateOf("Search a user here") }
            var list by remember { mutableStateOf(mutableListOf("")) }
            val context = LocalContext.current

            //Each time the text is updated, this is called
            // Need to use future to wait for the asynchronous fetch on the database
            viewModel.searchUserInDatabase(text).thenAccept {
...
//                .clickable {
//                    context.startActivity(intent)
//                } //TODO the empty brackets need to be replaced by the composable function or fires an intent to the desired profiles
//                .fillMaxSize()) {
//                Image(
//                    painter = painterResource(R.drawable.powerrangerblue),
//                    contentDescription = "Contact profile picture",
//                    modifier = Modifier
//                        // Set image size to 40 dp
//                        .size(40.dp)
//                        // Clip image to be shaped as a circle
//                        .clip(CircleShape)
//                )
...
