...
    ) {

        retakeImage.value = false

        Box(modifier = Modifier
            .fillMaxSize()
            .testTag("Camera Preview Box")) {
            val context = LocalContext.current
            if(hasCameraAccess) {
                //Instance of the camera provider
                val cameraProviderFuture = remember { ProcessCameraProvider.getInstance(context) }
                val cameraProvider = cameraProviderFuture.get()

...
                viewModel.updateCameraPreview(cameraProvider, lifecycleOwner, preview, videoCaptureRecorder, selectedMode)


                //Creates camera preview to allow the user to take a picture or video
                AndroidView(
                    factory = { previewView },
                    modifier = Modifier.testTag("Camera Preview")
                )

                Column(modifier = Modifier.align(Alignment.BottomCenter)) {
                    Row(modifier = Modifier.fillMaxWidth(),
                        horizontalArrangement = Arrangement.Center) {
                        //Add button to choose the picture mode
...
                                        context
                                    )
                                },
                                modifier = Modifier
                                    .padding(20.dp)
                                    .size(100.dp)
                                    .testTag("Take Picture Button")
                            )
                        }


                    }
                }
...
                            else { CameraSelector.DEFAULT_BACK_CAMERA }
                        viewModel.updateCameraPreview(cameraProvider, lifecycleOwner, preview, videoCaptureRecorder, selectedMode)
                    },
                    modifier = Modifier
                        .padding(paddingValue)
                        .align(Alignment.TopEnd)
                        .testTag("Switch Camera Button")
                )
                {
                    Image(
                        painterResource(id = R.drawable.switch_camera_icon),
                        contentDescription = "Switch Camera"
                    )
                }
            } else {
                Text(text= "No camera found on this device. Please allow the app to use the camera in your settings.", modifier = Modifier
                    .align(Alignment.Center)
                    .testTag("No Camera Text"))
            }

            //Add back button to get back to previous activity.
            BackButton({
                val intent = Intent(context, MainActivity::class.java)
                context.startActivity(intent)
                (context as Activity).finish() },
                Modifier
                    .padding(paddingValue)
                    .align(Alignment.TopStart)
                    .testTag("Back Button"))
        }
    }


    @Composable
    fun CapturedMedia(
...
                        StyledPlayerView(context).apply {
                            player = exoPlayer
                        }
                    },
                    modifier = Modifier
                        .fillMaxSize()
                        .testTag("Captured Video")
                )

            } else {
                //Displays the captured Image
                Image(
                    painter = rememberImagePainter(data = capturedUri),
                    contentDescription = "Captured Image",
                    modifier = Modifier.fillMaxSize()
                )
            }

            //Back button to get back to the camera preview
            BackButton(onBackClick =
...
                        Toast.LENGTH_SHORT).show()
                }
            }, modifier = Modifier
                .padding(paddingValue)
                .align(Alignment.BottomCenter)
                .fillMaxWidth()
                .testTag("Save Button"),
                context = context)
        }
    }

    @Composable
    fun SaveButton(onSaveClick: ()-> Unit, modifier: Modifier, context: Context){
...

        Button(
            onClick = onTakeVideoClick,
            modifier = Modifier
                .padding(20.dp)
                .size(100.dp)
                .testTag("Take Video Button"),
            shape = CircleShape,
            colors = ButtonDefaults.buttonColors(
                containerColor = Color.White,
                contentColor = Color.Black,
            ),
            border = BorderStroke(10.dp, Constants.COLOR_BACKGROUND)
...

    }


    @Composable
    fun SelectCameraModeButton(selectedMode: MutableState<Boolean>, isVideo: Boolean){
        val modeText = if (isVideo) "Video" else "Picture"
        Button(
            onClick = {
                selectedMode.value = !selectedMode.value
            },
            shape = RoundedCornerShape(16.dp),
            colors = ButtonDefaults.buttonColors(
...
